# CLI-tools

./: README.md  build-for-fedora.py  build-for-fedora.sh  build.sh  run-tests.sh  upload-to-pypi.sh
Source/: README  build.sh  localinstall.sh  run-tests.sh  setup_colour_filter.py  setup_colour_print.py  setup_colour_text.py  setup_cprint.py  setup_smart_find.py  setup_ssh_wait.py  setup_update_linux.py
Source/colour_filter/: README.md  __init__.py  __main__.py
Source/colour_print/: __main__.py
Source/colour_text/: README.md  __init__.py  __main__.py  run-test.sh
Source/compgen/: bash_compgen.py  compgen.md
Source/cprint/: README.rst  __init__.py  __main__.py  ctext.py
Source/scolour/: scolour.py
Source/sfind/: sfind.md  sfind.py
Source/smart_find/: README.md  __init__.py  __main__.py  run-test.sh
Source/ssh-wait/: ssh_wait.py
Source/ssh_wait/: __init__.py  __main__.py  ssh-wait.md
Source/update_linux/: README.md  __init__.py  __main__.py
colour_filter/: pyproject.toml  requirements.txt  run-test.sh
colour_filter/src/colour_filter/: __init__.py  __main__.py
colour_text/: README.md  pyproject.toml
colour_text/src/colour_text/: __init__.py  __main__.py
compgen/: pyproject.toml
dump/src/: dump.py
smart_find/: pyproject.toml
smart_find/src/smart_find/: __init__.py  __main__.py
ssh_wait/: README.md  pyproject.toml  run-test.sh
ssh_wait/src/ssh_wait/: __init__.py  __main__.py
update_linux/: README.md  pyproject.toml  requirements.txt
update_linux/src/update_linux/: __init__.py  __main__.py
