[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "colour-text"
authors = [
    {name = "Barry Scott", email = "barry@barrys-emacs.org"},
]
description = "colour_text that makes printing coloured text easier to do on Unix, macOS and Windows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [ "development" ]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "colour_text.VERSION"}

[project.optional-dependencies]

[project.scripts]
colour-print = "colour_text.__main__:main"

[project.urls]
"Homepage" = "https://github.com/barry-scott/CLI-tools"
"Bug Tracker" = "https://github.com/barry-scott/CLI-tools/issues"
